src/objects/Access_Set_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Access_Set__c</fullName>
        <label>Access Set</label>
        <referenceTo>Access_Set__c</referenceTo>
        <relationshipLabel>Access Set Assignments</relationshipLabel>
        <relationshipName>Access_Set_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_Teams_Creation_Status__c</fullName>
        <defaultValue>&quot;Initiated&quot;</defaultValue>
        <label>Account Teams Creation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <label>Unique ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Access_Set_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_s_Email_ID__c</fullName>
        <formula>User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User&apos;s Email ID</label>
        <type>Text</type>
    </fields>
    <label>Access Set Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Access_Set__c</columns>
        <columns>Account_Teams_Creation_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Unique_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ASM-{0000000000}</displayFormat>
        <label>Access Set Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Access Set Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>